--- a/app/src/public/index.html
+++ b/app/src/public/index.html
@@ -5,51 +5,110 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>oratorIQ</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
+            background-color: #f8f9fa;
+            padding-top: 20px;
         }
 
-        h1,
-        h2,
-        h3,
-        h4 {
-            text-align: center;
+        h1 {
+            color: #343a40;
         }
 
-        form {
-            text-align: center;
+        h2 {
+            color: #495057;
         }
 
-        .results {
-            margin-top: 20px;
-            text-align: center;
+        .custom-btn {
+            background-color: #007bff;
+            color: white;
+        }
+
+        .custom-btn:hover {
+            background-color: #0056b3;
+        }
+
+        .card {
+            border-radius: 12px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        .table th,
+        .table td {
+            vertical-align: middle;
+        }
+
+        .table thead {
+            background-color: #007bff;
+            color: white;
         }
     </style>
 </head>
 
 <body>
-    <h1>oratorIQ - Upload Audio for Transcription and NLP Analysis</h1>
-    <form id="uploadForm" enctype="multipart/form-data">
-        <input type="file" name="audio" accept="audio/*" required><br><br>
-        <button type="submit">Upload & Analyze</button>
-    </form>
-    <div class="results" id="results"></div>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg">
+                <h1 class="text-center mb-4">oratorIQ - Upload Audio for Transcription and NLP Analysis</h1>
+                <!-- Upload form -->
+                <div class="card p-4 mb-5">
+                    <form id="uploadForm" enctype="multipart/form-data" class="text-center">
+                        <div class="mb-3">
+                            <input type="file" name="audio" accept="audio/*" class="form-control" required>
+                        </div>
+                        <button id="fileSubmit" type="submit" class="btn custom-btn">Upload & Analyze</button>
+                    </form>
+                </div>
+                <!-- Results Section -->
+                <div class="card p-4 mb-5" id="results">
+                    <div id="statusBadge" class="badge bg-info">Upload a file to start the process</div>
+                    <h3 class="text-center">Results</h3>
+                    <div id="resultsDiv">Transcribed audio will be displayed here</div>
+                    <table class="table table-bordered">
+                        <thead>
+                            <tr>
+                                <th>Question</th>
+                                <th>Sentiment</th>
+                                <th>Score</th>
+                            </tr>
+                        </thead>
+                        <tbody id="questionsTableBody">
+                            <!-- Questions results will be displayed here -->
+                        </tbody>
+                    </table>
+                </div>
 
-    <h2>Ask a Custom Question</h2>
-    <form id="questionForm">
-        <input type="text" id="customQuestion" placeholder="Type your question here" required>
-        <button type="submit">Ask</button>
-    </form>
-    <div class="questionResults" id="questionResults"></div>
+                <div class="card p-4">
+                    <h2 class="text-center">Ask a Custom Question</h2>
+                    <form id="questionForm" class="text-center">
+                        <div class="mb-3">
+                            <input type="text" id="customQuestion" class="form-control"
+                                placeholder="Type your question here" required>
+                        </div>
+                        <button type="submit" class="btn custom-btn">Ask</button>
+                    </form>
+                    <div id="questionResults" class="text-center mt-3"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Bootstrap JS Bundle -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
     <script>
         document.getElementById('uploadForm').addEventListener('submit', async function (event) {
             event.preventDefault();
 
-            const resultsDiv = document.getElementById('results');
-            resultsDiv.innerHTML = '<p>Loading...</p>';
+            const uploadButton = document.getElementById('fileSubmit');
+            uploadButton.disabled = true;
+
+            const resultStatus = document.getElementById('statusBadge');
+            resultStatus.textContent = 'Processing...';
+            resultStatus.classList = 'badge bg-warning';
+
 
             const formData = new FormData();
             const fileInput = document.querySelector('input[type="file"]');
@@ -67,38 +126,36 @@
                     body: formData
                 });
                 const result = await response.json();
-                // {
-                //     transcribedText: string,
-                //     const questionAnalysis: {
-                //         questions: {
-                //             sentence: any;
-                //             sentiment: any;
-                //         }[];
-                //         questionCount: number;
-                //     }
-                // }
 
-                let questionsHtml = '';
-                result.questionAnalysis.questions.forEach(question => {
-                    questionsHtml += `
-                        <h3>Question:</h3>
-                        <p>${question.sentence}</p>
-                        <h3>Sentiment:</h3>
-                        <p>Sentiment Score: ${question.sentiment.vote} (${question.sentiment.score})</p>
-                    `;
-                });
-
+                // Update transcribed text
                 resultsDiv.innerHTML = `
                     <h3>Transcribed Text:</h3>
                     <p>${result.transcribedText}</p>
                     <h3>Analysis:</h3>
                     <p>Number of Questions: ${result.questionAnalysis.questionCount}</p>
-                    ${questionsHtml}
                 `;
+
+                // Populate the questions table
+                const questionsTableBody = document.getElementById('questionsTableBody');
+                questionsTableBody.innerHTML = ''; // Clear any existing rows
+
+                result.questionAnalysis.questions.forEach(question => {
+                    const row = document.createElement('tr');
+                    row.innerHTML = `
+                        <td>${question.sentence}</td>
+                        <td>${question.sentiment.vote}</td>
+                        <td>${question.sentiment.score}</td>
+                    `;
+                    questionsTableBody.appendChild(row);
+                });
+                resultStatus.textContent = 'Done at ' + new Date().toLocaleTimeString();
+                resultStatus.classList = 'badge bg-success';
             } catch (error) {
                 console.error(error);
-                resultsDiv.innerHTML = '<p>Error processing the request. Please check logs.</p>';
+                resultStatus.textContent = 'Error';
+                resultStatus.classList = 'badge bg-danger';
             }
+            uploadButton.disabled = false;
         });
 
         // Handle custom question submission
