--- a/app/src/public/index.html
+++ b/app/src/public/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>oratorIQ</title>
+    <title>OratorIQ</title>
 </head>
 
 <body>
-                <h1 class="text-center mb-4">oratorIQ - Upload Audio for Transcription and NLP Analysis</h1>
+                <h1 class="text-center mb-4">OratorIQ - Upload Audio for Transcription and NLP Analysis</h1>
 
                     <form id="uploadForm" enctype="multipart/form-data" class="text-center">
                             <input type="file" name="audio" accept="audio/*" class="form-control" required>
